[project]
name = "who-edited"
version = "0.1.0"
description = "CLI to find who edited a specific line of a file using git blame with advanced analytics"
requires-python = ">=3.10"
dependencies = [
    "typer[all]",
    "textual>=0.30.0",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "scikit-learn>=1.0.0",
    "requests>=2.28.0",
    "rich>=13.3.0",
    "numpy>=1.23.0"
]

[project.scripts]
who-edited = "who_edited.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

